# LLM-Magnitude

./: README.md  magnitude_curve.csv  pyproject.toml
magnitude/: display.py  entropy.py  graphs.py  invariant.py  inverses.py  language.py  language_model.py  language_model_pre_trained.py  metric_space.py  probability.py
notebooks/: ab_language_model.ipynb  hf_models.ipynb  mag_of_translations.ipynb
