[project]
name = "magnitude"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-huggingface>=1.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
]

[tool.uv.sources]
magnitude = { path = "./magnitude" }

[tool.setuptools]
packages = ["magnitude"]

[tool.setuptools.package-dir]
magnitude = "magnitude"

[tool.pytest.ini_options]
pythonpath = [
    "magnitude"
]
testpaths = [
    "tests"
]
addopts = [
    "-q"
]
